Change Stats collector to combiner; correct distributed bloom filter; collect complete counts

--- a/res/project/bibliography.bib
+++ b/res/project/bibliography.bib
@@ -83,3 +83,20 @@
   year={2012}
 }
 
+@article{hammer,
+  title = {Error correction of high-throughput sequencing datasets with non-uniform coverage},
+  author = {Medvedev, Paul and Scott, Eric and Kakaradov, Boyko and Pevzner, Pavel},
+  biburl = {http://www.bibsonomy.org/bibtex/235cb14c5e3175cd5b12b1e3316385911/ytyoun},
+  doi = {10.1093/bioinformatics/btr208},
+  journal = {Bioinformatics},
+  keywords = {NGS error-correction hamming},
+  number = 13,
+  pages = {i137-i141},
+  timestamp = {2013-03-12T04:47:36.000+0100},
+  title = {Error correction of high-throughput sequencing datasets with non-uniform coverage},
+  volume = 27,
+  year = 2011
+}
+
+
+
